2019-04-05  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r243833.
        https://bugs.webkit.org/show_bug.cgi?id=196645

        This change breaks build of WPE and GTK ports (Requested by
        annulen on #webkit).

        Reverted changeset:

        "[CMake][WTF] Mirror XCode header directories"
        https://bugs.webkit.org/show_bug.cgi?id=191662
        https://trac.webkit.org/changeset/243833

2019-04-04  Simon Fraser  <simon.fraser@apple.com>

        Simple iframe scrolling test fails to get a composited scrolling frame in WebKitTestRunnerApp
        https://bugs.webkit.org/show_bug.cgi?id=196635

        Reviewed by Antti Koivisto.
        
        InjectedBundle::beginTesting() calling WKBundleSetAsyncFrameScrollingEnabled() makes it impossible
        for a test to enable async frame scrolling via:
            <!-- webkit-test-runner [ internal:AsyncFrameScrollingEnabled=true ] -->
        so remove it and have TestController::resetPreferencesToConsistentValues() set the default value.
        
        Test: scrollingcoordinator/ios/programmatic-frame-scroll.html

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):

2019-04-04  Alexey Proskuryakov  <ap@apple.com>

        Use a correct LC_RPATH when building with ASan
        https://bugs.webkit.org/show_bug.cgi?id=196576

        Reviewed by David Kilzer.

        * asan/asan.xcconfig: As a temporary hack, just force LC_RPATH on all binaries,
        so that ../Frameworks is checked. This is simpler and more reliable than updating
        each SPC service xcconfig.

2019-04-04  Aakash Jain  <aakash_jain@apple.com>

        Disable Flaky API Test TestWebKitAPI.WebKit.FocusTextInputContext
        https://bugs.webkit.org/show_bug.cgi?id=196629

        Reviewed by Lucas Forschler.
