@@ -1,3 +1,12 @@
+2019-04-05  Sihui Liu  <sihui_liu@apple.com>
+
+        Test sessionStorage in PSON private browsing mode
+        https://bugs.webkit.org/show_bug.cgi?id=196561
+
+        Reviewed by Alex Christensen.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
+
 2019-04-05  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r243833.
